--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>XM</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        >
+        <link rel="stylesheet" href="./xm/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="container underline">
+                <div class="d-flex">
+                    <div class="d-inline-block">Home</div>
+                    <div class="d-inline-block">About me</div>
+                    <div class="d-inline-block">Skills</div>
+                    <div class="d-inline-block">Portfolio</div>
+                    <div class="d-inline-block">Contacts</div>
+                </div>
+            </div>
+            <div class="container home-body">
+                <div class="d-flex">
+                    <div class="d-inline-block text1">
+                        Hojiakbar
+                        <br>
+                        Turatov
+                    </div>
+                    <div class="d-inline-block text2" id="jobs">Frond End Developer</div>
+                    <div class="d-inline-block">
+                        <div id="lang">
+                            <span>Uz</span>
+                            <span class="active">
+                                |
+                            </span>
+                            <span class="active">Eng</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-5 mb-5">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="./xm/hojiakbar.jpg" alt="Hojiakbar Turatov" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </header>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="./xm/app.js"></script>
+    </body>
 </html>
