--- a/index.html
+++ b/index.html
@@ -94,18 +94,8 @@
                         <!-- Slider main container -->
                         <div class="swiper">
                             <!-- Additional required wrapper -->
-                            <div class="swiper-wrapper">
-                                <!-- Slides -->
-                                <div class="swiper-slide">Slide 1</div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
-                                <div class="swiper-slide">Slide 4</div>
-                                <div class="swiper-slide">Slide 5</div>
-                                <div class="swiper-slide">Slide 6</div>
-                                <div class="swiper-slide">Slide 7</div>
-                                <div class="swiper-slide">Slide 8</div>
-                                <div class="swiper-slide">Slide 9</div>
-                            </div>
+                            <div class="swiper-wrapper" id="projects">
+                                <!-- Slides --></div>
                             <!-- If we need pagination -->
                             <div class="swiper-pagination"></div>
                             <!-- If we need navigation buttons -->
@@ -147,6 +137,8 @@ You are welcome!
         </div>
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!-- Course -->
+        <script src="./xm/app.js"></script>
         <!-- Swipper Js -->
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script type="module">
@@ -181,7 +173,5 @@ You are welcome!
 //   },
 });
         </script>
-        <!-- Course -->
-        <script src="./xm/app.js"></script>
     </body>
 </html>
