--- a/index.html
+++ b/index.html
@@ -143,19 +143,11 @@ You are welcome!
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script type="module">
             import Swiper from 'https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js'
-          let i;
-          if(window.innerWidth < 576){
-              i = 1;
-          } else if(window.innerWidth < 992){
-              i = 2;
-          } else {
-              i = 3;
-          }
             const swiper = new Swiper('.swiper', {
   // Optional parameters
 //   direction: 'vertical',
   loop: true,
-  slidesPerView: i,
+  slidesPerView: 1,
   // If we need pagination
   pagination: {
     el: '.swiper-pagination',
