--- a/index.html
+++ b/index.html
@@ -1,169 +1,57 @@
 <!DOCTYPE html>
-<html lang="uz" class="no-touch translated-ltr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>XM</title>
-        <!-- Bootstrap -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-        >
-        <!-- Swipper Js -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-        <!-- Course -->
-        <link rel="stylesheet" href="./xm/style.css">
-    </head>
-    <body>
-        <header>
-            <div class="container underline">
-                <div class="d-flex">
-                    <div class="d-inline-block">Home</div>
-                    <div class="d-inline-block">About me</div>
-                    <div class="d-inline-block">Portfolio</div>
-                    <div class="d-inline-block">Contacts</div>
-                </div>
-            </div>
-            <div class="container home-body">
-                <div class="d-flex">
-                    <div class="d-inline-block text1">
-                        Hojiakbar
-                        <br>
-                        Turatov
-                    </div>
-                    <div class="d-inline-block text2" id="jobs">Frond End Developer</div>
-                    <div class="d-inline-block">
-                        <div id="lang">
-                            <span>Uz</span>
-                            <span class="active">
-                                |
-                            </span>
-                            <span class="active">Eng</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container pb-5 mb-5">
-                <div class="row">
-                    <div class="col-12">
-                        <img src="./xm/hojiakbar.jpg" alt="Hojiakbar Turatov" class="w-100">
-                    </div>
-                </div>
-            </div>
-        </header>
-        <section id="about">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="text1 col-auto">
-                        About me
-                    </div>
-                </div>
-                <div class="row justify-content-center text2">
-                    <div class="col-10 col-sm-9 col-md-8 col-lg-7 col-xl-6 col-xxl-5">
-                        Hi, I'm Hojiakbar – Frond End Developer from Jizzax. 
-                        I'm interested in programming and everything connected with it.
-                    </div>
-                </div>
-                <div class="row justify-content-center text3">
-                    <div class="col-10 col-sm-9 col-md-8 col-lg-7 col-xl-6 col-xxl-5">
-                        I'm studying at courses "Web (Frond End) Developer" in TeamIT Academy.
-                    </div>
-                </div>
-                <div class="row justify-content-center text4">
-                    <div class="col-10 col-sm-9 col-md-8 col-lg-7 col-xl-6 col-xxl-5">
-                        I ready to implement excellent projects
-                         with wonderful people.
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div id="portfolio">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="text1 col-auto">
-                        Portfolio
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <!-- Slider main container -->
-                        <div class="swiper">
-                            <!-- Additional required wrapper -->
-                            <div class="swiper-wrapper" id="projects">
-                                <!-- Slides --></div>
-                            <!-- If we need pagination -->
-                            <div class="swiper-pagination"></div>
-                            <!-- If we need navigation buttons -->
-                            <!-- <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div> -->
-                            <!-- If we need scrollbar -->
-                            <!-- <div class="swiper-scrollbar"></div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="contacts">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-auto text1">
-                        Contacts
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-auto text2">
-                        Want to know more or just chat? 
-You are welcome!
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-auto">
-                        <a href="https://t.me/hojiakbar_turotov" class="btn btn-success text3">
-                            Send message
-                        </a>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-auto text4">
-                        Made with &#10084;  | 2022
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <!-- Course -->
-        <script src="./xm/app.js"></script>
-        <!-- Swipper Js -->
-        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-        <script type="module">
-            import Swiper from 'https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js'
-            const swiper = new Swiper('.swiper', {
-  // Optional parameters
-//   direction: 'vertical',
-  loop: true,
-  slidesPerView: 1,
-  // If we need pagination
-  pagination: {
-    el: '.swiper-pagination',
-  },
+<html lang="en" class="no-touch translated-ltr">
 
-  // Navigation arrows
-//   navigation: {
-//     nextEl: '.swiper-button-next',
-//     prevEl: '.swiper-button-prev',
-//   },
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XM</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Swipper Js -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+    <!-- Course -->
+    <link rel="stylesheet" href="./xm/style.css">
+</head>
 
-  // And if we need scrollbar
-//   scrollbar: {
-//     el: '.swiper-scrollbar',
-//   },
-});
-        </script>
-    </body>
+<body>
+    <main id="body">
+    </main>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- Course -->
+    <script src="./xm/scroll.js" defer></script>
+    <script src="./xm/translate.js"></script>
+    <script src="./xm/app.js"></script>
+    <!-- Swipper Js -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module">
+        import Swiper from 'https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js'
+        const swiper = new Swiper('.swiper', {
+            // Optional parameters
+            //   direction: 'vertical',
+            loop: true,
+            slidesPerView: 1,
+            // If we need pagination
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            // Navigation arrows
+            //   navigation: {
+            //     nextEl: '.swiper-button-next',
+            //     prevEl: '.swiper-button-prev',
+            //   },
+
+            // And if we need scrollbar
+            //   scrollbar: {
+            //     el: '.swiper-scrollbar',
+            //   },
+        });
+    </script>
+</body>
+
 </html>
